--- a/digital-card/package.json
+++ b/digital-card/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-info-site",
+  "name": "digital-card",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
